src/components/Button.module.scss
@import '/src/styles/variables';

.btn {
	padding: 0.75rem 1.25rem;
	font-size: 1rem;
	background-color: $black;
	color: white;
	font-family: inherit;
	font-weight: bold;
	border: none;
	border-radius: 1rem;

	&:hover {
		background-color: $black-lighten;
		cursor: pointer;
	}
}

.icon {
	display: flex;
	background-color: transparent;
	padding: 0;
	font-size: 2rem;
	color: $black-lighten;

	&:hover {
		background-color: transparent;
	}
}

